--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "firebase": "^10.1.0",
     "next": "13.4.10",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.2",
     "tailwindcss": "3.3.3"
   }
 }
